fixed scrollbar.css

--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -18,7 +18,7 @@
     background: whitesmoke;
 }
     ::-webkit-scrollbar-track-piece:start {
-        background: grey;
+        background: whitesmoke;
     }
 
 ::-webkit-scrollbar-thumb {
